# PhysicsSync_Claw

./: .clawd-todos.json  .gitattributes  .gitignore  CMakeLists.txt  Claw问题修复信息记录.txt  README.md  build.bat  client_output.txt  run.txt  server_output.txt  start_client.bat  start_server.bat  物理同步技术.md
.claw/plugins/: installed.json
.claw/sessions/46721dd124005742/: session-1776562455160-0.jsonl  session-1776562455160-0.rot-1776576736260.jsonl  session-1776562455160-0.rot-1776586186404.jsonl  session-1776562455160-0.rot-1776599088368.jsonl
.claw/sessions/bb7e95c4f5aa1457/: session-1776650555836-0.jsonl  session-1776650555836-0.rot-1776652993071.jsonl  session-1776653101115-0.jsonl  session-1776653101115-0.rot-1776671675911.jsonl  session-1776653101115-0.rot-1776683889724.jsonl  session-1776686606054-0.jsonl  session-1776686629734-0.jsonl  session-1776686629734-0.rot-1776694744977.jsonl  session-1776686629734-0.rot-1776708430200.jsonl  session-1776731672077-0.jsonl  session-1776732589831-0.jsonl  session-1776732589831-0.rot-1776738969890.jsonl  session-1776739859921-0.jsonl  session-1776739859921-0.rot-1776743754017.jsonl
doc/: physics_rendering2.txt  physics_with_rendering.txt  tips.txt  增加渲染功能tips.txt  渲染功能实现文档.md  渲染功能集成文档.md  问题修复信息记录.txt  项目审查报告.md
src/client/: CMakeLists.txt  FilamentRenderer.cpp  FilamentRenderer.h  InputHandler.cpp  InputHandler.h  RenderingObjectManager.cpp  RenderingObjectManager.h  client_main.cpp  client_tests.cpp  physics_client.cpp  physics_client.h
src/common/: CMakeLists.txt  common_tests.cpp  deterministic_random.cpp  deterministic_random.h  kcp_wrapper.h  network_layer.cpp  network_layer.h  network_protocol.cpp  network_protocol.h  physics_state.cpp  physics_state.h  serializer.cpp  serializer.h  timestep_manager.cpp  timestep_manager.h  udp_socket.cpp  udp_socket.h
src/server/: CMakeLists.txt  physics_server.cpp  physics_server.h  server_main.cpp  server_tests.cpp
todo/: task_tracking_v2.md
